# tiny-fe

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  entry.rs  hotkeys.rs  index.rs  lib.rs  main.rs
src/snapshots/: tiny_dc__app__tests__renders_correctly.snap  tiny_dc__app__tests__renders_correctly_with_help_popup.snap  tiny_dc__app__tests__renders_correctly_with_search_input.snap  tiny_dc__app__tests__renders_correctly_with_search_input_after_key_events.snap  tiny_dc__app__tests__renders_correctly_without_help_popup_after_key_event_toggle.snap  tiny_dc__app__tests__search_renders_correctly.snap  tiny_fe__app__tests__renders_correctly.snap  tiny_fe__app__tests__renders_correctly_with_help_popup.snap  tiny_fe__app__tests__renders_correctly_with_help_popup_after_key_event.snap  tiny_fe__app__tests__renders_correctly_with_search_input.snap  tiny_fe__app__tests__renders_correctly_with_search_input_after_key_events.snap  tiny_fe__app__tests__renders_correctly_without_help_popup_after_key_event_toggle.snap  tiny_fe__app__tests__search_renders_correctly.snap
tests/: app_tests.rs  index_tests.rs
tests/snapshots/: app_tests__change_directory_lists_correct_directory_entires.snap  app_tests__entry_hotkey_jumps_successfully.snap  app_tests__entry_hotkey_jumps_successfully_in_search_mode.snap  app_tests__entry_hotkey_missing_when_in_search_mode_and_search_input_is_empty.snap
