[package]
name = "tiny-dc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"

[dev-dependencies]
insta = "1.41.1"
tempfile = "3.13.0"
